*Fixed on Windows a bug where opening a second instance of pd-l2ork without the unique flag did not get that second instance closed properly. *Improved bar graph positioning. *Improved visibility of the array name.

--- a/pd/nw/css/common.css
+++ b/pd/nw/css/common.css
@@ -105,7 +105,10 @@
 }
 
 .graph_label {
+    /*
     font-weight: bold;
     filter: invert(1);
     mix-blend-mode: difference;
+    */
+    text-shadow: -0.5px -0.5px 0 #fff, 0.5px -0.5px 0 #fff, -0.5px 0.5px 0 #fff, 0.5px 0.5px 0 #fff;
 }
